--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -21,6 +21,7 @@
         width: 190px;
         height: 250px;
         z-index: 50;
+        backdrop-filter: brightness(40%);
     }
 
     #contact{
