--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,3 +1,7 @@
+:root{
+    --white:#ffffffdd;;
+    --black:#080808;
+}
 @media only screen and ( max-width:1000px){
     #contact-desc{
         display: none;
@@ -5,38 +9,34 @@
     .container nav{
         justify-content: space-between;
     }
+    .container{
+        
+        margin: auto;
+    }
 }
-@media only screen and ( max-width : 800px){
+@media only screen and ( max-width :800px){
     #contact-800{
         display: block;
     }
     
-    .container nav ul{
-        display: none;
-        position: absolute;
-        right: 1%;
-        top: 17%;
-        border: 2px solid #0ef;
-        border-radius: 5px;
-        width: 190px;
-        height: 250px;
-        z-index: 50;
-        backdrop-filter: brightness(40%);
-    }
+    
 
     #contact{
         display: none;
     }
-    #bar{
-        display: block;
+    .main-nav-link{
+        display: none;
         
     }
-    #xcross{
-        display: none;
+    #bar{
+        display: block;
     }
-    /* .container nav ul{
-        display: none;
-    } */
+ 
+    
+    .row{
+        display: block;
+    }
+    
     #skill-container{
         column-count: auto;
         height: 300px;
@@ -45,50 +45,101 @@
     #skill-container::-webkit-scrollbar{
         display: none;
     }
+    .container{ 
+        max-width: 100%;
+    }
     #my-header{
         width:100%;
-        height: 200px;
-        background-image: url('/photos/premium_photo-1684996016538-499ab401105d.avif');
+        height: 270px;
+        background-image: url('../photos/premium_photo-1684996016538-499ab401105d.avif');
+        background-color: #080808c4;
         font-size: 20px;
         background-size:cover;
         background-position:center;
     }
-    #abds{backdrop-filter: brightness(40%);
-    width: 100%;
-    height: 100%;}
-    .header-text{
+    #absd{
+        width:100%;
+        background-color: #08080899;
+        height: 270px;
+    }
+    #header-center-1{
+        display: block;
+    }
+    
+    
+    .header-text-1{
         font-family: 'Courier New', Courier, monospace;
         margin-top: 4%;
         margin-left: 35%;
         font-size: 20px;
     }
-    .header-text h1{
+    .header-text-1 h1 span{
+        color: red;
+    }
+    
+    .header-text-1 h1{
         font-family: cursive;
         font-size: 30px;
+
     }
+    .header-text-1 p{
+        margin: 6px;
+        font-size: 15px;
+    }
+    #header-center{
+        display: none;
+    }
+    .contact-link-2{
+        display: flex;
+        /* margin-top: 4%; */
+        margin-left: 35%;
+    }
+    #side-nav{
+        display: block;
+    }
+    #sidebar{
+        display: none;
+    }
+    
     .about-col-1{
         position: absolute;
-        top: 55px;
+        top: 87px;
         width: 234px;
         display: inline-block;
         
     }
     .about-col-1 img{
-        width: 90%;
-        height: 155px;
+        width: 67%;
+        height: 139px;
     }
- 
-    
-    .row{
-        display: block;
+   
+    #Hire-1{
+        display: flex;
+        justify-content: flex-end;
     }
-    #hiremebtn{
-    
-    top: 0px;
-    left: 73%;
+    #hiremebtn-1{
+    background-color: transparent;
+    border: 2px solid var(--white);
+    border-radius: 40px;
     width: 60px;
     height: 29px;
-    font-size: 9px;
+    font-size: 12px;
+    margin-left: 12px;
+    margin-right: 15px;
+    color: var(--white);
+    }
+    #download-resume-1{
+        background-color: transparent;
+        border: 2px solid rgb(233, 108, 25);
+        border-radius: 40px;
+        width: 76px;
+        height: 29px;
+        font-size: 12px;
+        margin-right: 12px;
+        color: var(--white);
+        }
+    .social-link-1{
+       width: 18%; 
     }
     #contact-input-800{
         width: 100%;
@@ -116,6 +167,11 @@
     
 }
 @media only screen and (max-width:500px){
+    #hiremebtn{
+       
+        bottom: 60px;
+        
+        }
     #contact-800-desc{
         display: none;
     }
@@ -123,7 +179,13 @@
         font-size: 18px;
     }
     #my-header h1{
-        font-size: 24px;
+        font-size: 20px;
+    }
+    .header-text-1{
+        font-size: 15px;
+    }
+    #Hire-1{
+        margin-top: 25px;
     }
     #contact-800-desc1{
         display: block;
