--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --white:#fff;
+    --white:#ffffffdd;;
     --black:#080808;
 }
 *{
@@ -7,6 +7,7 @@
     padding: 0px;
     font-family:'poppins',sans-serif;
     box-sizing: border-box;
+    
 }
 body {
     background-color: var(--black);
@@ -16,13 +17,16 @@ body {
 #my-header{
     width:100%;
     height: 100vh;
-    background-image:url('/photos/bennie-bates-wDOy3n2BPqM-unsplash.jpg') ;
+    background-image:url('/photos/header-background.webp') ;
     background-size:cover;
-    background-position:center;
+    background-repeat: no-repeat;
+    background-position:top;
+    
 }
 
 .container{
     padding: 1px,1px;
+    width: 100%;
 }
 .container nav{
     
@@ -31,14 +35,41 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{width: 140px;}
+.logo{
+    font-size: 50px;
+    font-family: cursive;
+    font-weight: 500;
+    color: #ff004f;
+}
+/* #xcross{
+    display: block;  
+} */
+#side-nav{
+    /* display: inline-block; */
+    display: none;
+
+}
+
+#sidebar{
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 50vh;
+    backdrop-filter: blur(10px);
+    z-index: 99;
+    border: 2px solid #0ef;
+    border-radius: 7px;
+}
+#sidebar li{
+    width: 100%;
+}
 #bar{
     display: none;
-}
-#xcross{
-    display: none;
-    
-    
 }
 
 nav ul li{
@@ -73,29 +104,67 @@ nav ul li a:hover::after{
     width:100%;
 }
 .header-text{
-    color: white;
-    margin-top: 20% ;
-    margin-left: 5%;
-    font-size: 30px;
+    color: var(--white);
+    /* margin-top: 20% ; */
+    /* margin-left: 5%; */
+    text-align: center;
+    font-size: 16px;
 }
 .header-text h1{
     font-size: 60px;
+    font-weight: 600;
+    margin: 20px;
 }
 .header-text h1 span{
     color: red;
 }
-#hiremebtn{
-    position: relative;
-    top: 150px;
-    left: 60px;
-    width: 100px;
-    height: 50px;
-    color: var(white);
-    
+.header-text p{
+    margin: 20px;
 }
+#header-center{
+    width: 80%;
+    height: 10%;
+    margin: 12% auto;
+    background-color: rgba(56, 56, 56, .4);
+    backdrop-filter: blur(5px);
+    padding: 2%;
+}
+.contact-link-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+
+#hiremebtn{
+    background-color: transparent;
+    border: 2px solid var(--white);
+    border-radius: 40px;
+    width: 100px;
+    height: 38px;
+    color: var(--white);
+    margin-left: 5%;
+}
+#download-resume{
+    
+    background-color: transparent;
+    border: 2px solid rgb(233, 108, 25);;
+    border-radius: 40px;
+    width: 100px;
+    height: 38px;
+    color: var(--white);
+}
+#Hire{
+    
+    text-align: center;
+}
+#header-center-1{
+    display: none;
+}
+
 /* --------------------about--------------------- */
 #about{
-    padding: 80px 0;
+    padding: 40px 0;
      color: #ababab;
 
 }
@@ -159,11 +228,18 @@ object-position: 10px 43%;
 }
 .tab-contents ul li{
     list-style: none;
-    margin: 10px 0;
+    margin: 20px 0;
+    text-align: center;
+}
+.tab-contents ul{
+    padding: 0;
+}
+#and{
+    font-size: 18px;
 }
 .tab-contents ul li span{
-    color:#ff004f;
-    font-size: 14px;
+    
+    font-size: 24px;
 }
 #tab-contents-edu{
     display: none;
@@ -212,13 +288,24 @@ object-position: 10px 43%;
     top: 23px;
     
 }
-#progress-bar-width{
-    width: 34%;
-    transition: width 1s;
+
+.css-progress{
+    width: 30%;
+    transition: width 2s ease-out;
 }
-#progress-bar-width:hover{
-    width: 90%;
+.api-progress{
+    width: 70%;
 }
+.css-progress{
+    width:80%
+}
+.html-progress{
+   width: 90%;
+}
+
+
+
+
 /* -----------------contact----------------- */
 #contact{
     margin: 5px;
